--- a/app/src/main/res/layout/home_view_holder.xml
+++ b/app/src/main/res/layout/home_view_holder.xml
@@ -29,13 +29,13 @@
         android:ellipsize="end"
         android:maxLines="2"
         android:textColor="@android:color/black"
-        app:layout_constraintEnd_toStartOf="@+id/priceTextView"
+        app:layout_constraintEnd_toStartOf="@+id/trackDurationTextView"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
         tools:text="Una larga canción" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/trackReleasedDateTextView"
+        android:id="@+id/authorTrackTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -46,7 +46,7 @@
         tools:text="21/02/2012" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/priceTextView"
+        android:id="@+id/trackDurationTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
@@ -56,23 +56,5 @@
         app:layout_constraintTop_toTopOf="@+id/trackNameTextView"
         app:layout_constraintVertical_bias="0.0"
         tools:text="$.123.56" />
-
-    <com.google.android.material.chip.Chip
-        android:id="@+id/recurringChip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="@color/purple_100"
-        android:text="Tag"
-        android:textColor="#EDEDF3"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/trackReleasedDateTextView"
-        app:layout_constraintTop_toBottomOf="@+id/priceTextView"
-        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
